--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "users",
   "version": "0.1.0",
-  "homepage": "https://myusername.github.io/users",
+  "homepage": "https://myusername.github.io/home",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
